--- a/src/styles/Profile.module.css
+++ b/src/styles/Profile.module.css
@@ -4,4 +4,9 @@
 
 .Usernames {
   color: #ffa750;
+  overflow: hidden;
+  width: 100px;
+  display: -webkit-box;
+  -webkit-line-clamp: 1;
+  -webkit-box-orient: vertical;
 }
