--- a/src/styles/ProfilePage.module.css
+++ b/src/styles/ProfilePage.module.css
@@ -18,6 +18,7 @@
 }
 
 .ProfileOwner {
+  word-wrap: break-word;
   background: linear-gradient(70deg, #ff6b6b, #7a2de6);
   -webkit-text-fill-color: transparent;
   -webkit-background-clip: text;
